--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_main">
@@ -10,5 +11,57 @@
         android:layout_height="@dimen/_250sdp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/s_ic" />
+        android:src="@drawable/s_ic"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:id="@+id/laybg"
+
+        android:layout_width="match_parent"
+        android:layout_height="325dp"
+        android:layout_marginTop="10dp"></RelativeLayout>
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="match_parent"
+        android:layout_height="325dp"
+
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="7dp"
+        android:text=" Select from Gallery"
+        android:visibility="gone" />
+
+    <Button
+
+        android:id="@+id/button2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="7dp"
+        android:text=" Open color picker"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:id="@+id/seekbatlayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
+
+        <SeekBar
+            android:id="@+id/sb_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:max="200"
+            android:progress="100" />
+    </RelativeLayout>
 </RelativeLayout>
