--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
         android:id="@+id/laybg"
 
         android:layout_width="match_parent"
-        android:layout_height="325dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"></RelativeLayout>
 
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
-        android:layout_height="325dp"
+        android:layout_height="match_parent"
 
         android:layout_centerHorizontal="true" />
 
