--- a/app/src/main/res/layout/backgrounds.xml
+++ b/app/src/main/res/layout/backgrounds.xml
@@ -50,7 +50,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/_45sdp"
         android:background="@color/grey"></LinearLayout>
 
     <GridView
