--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -2,28 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="@dimen/_5sdp"
     android:orientation="vertical">
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageview"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:paddingRight="@dimen/_5sdp" />
 
         <TextView
-
             android:id="@+id/txtview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
