--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#7A7A7A</color>
     <color name="dullblack">#344152</color>
+    <color name="dialog_bg">#234671</color>
+
 </resources>
