--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_main">
+    android:background="@drawable/wall">
 
     <!--<ImageView-->
     <!--android:id="@+id/iv_main"-->
@@ -34,7 +34,6 @@
             android:id="@+id/imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:layout_centerHorizontal="true" />
 
         <Button
@@ -67,6 +66,25 @@
 
             <SeekBar
                 android:id="@+id/sb_value"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentBottom="true"
+                android:max="255"
+                android:maxHeight="@dimen/_80sdp"
+                android:minHeight="@dimen/_80sdp"
+                android:progress="100" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/seekbatlayouttext"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone">
+
+            <SeekBar
+                android:id="@+id/sb_value_text"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_alignParentBottom="true"
