--- a/app/src/main/res/layout/clipart_text.xml
+++ b/app/src/main/res/layout/clipart_text.xml
@@ -12,8 +12,8 @@
 
     <TextView
         android:id="@+id/canvas_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="25dp"
         android:padding="10dp"
         android:scaleType="fitCenter"
