--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
+        android:layout_below="@+id/ll_styles">
+
 
         <ImageView
             android:id="@+id/iv_main"
@@ -34,7 +35,8 @@
             android:id="@+id/imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button1"
@@ -93,5 +95,128 @@
                 android:minHeight="@dimen/_80sdp"
                 android:progress="100" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_xy"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:id="@+id/rotationX"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="X"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_20sdp" />
+
+                <SeekBar
+                    android:id="@+id/sb_value_x"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_alignParentBottom="true"
+                    android:max="255"
+                    android:maxHeight="@dimen/_80sdp"
+                    android:minHeight="@dimen/_80sdp"
+                    android:progress="100" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rotationY"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_toRightOf="@+id/rotationX"
+                android:layout_weight="1"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="Y"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_20sdp" />
+
+                <SeekBar
+                    android:id="@+id/sb_value_y"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_alignParentBottom="true"
+                    android:max="255"
+                    android:maxHeight="@dimen/_80sdp"
+                    android:minHeight="@dimen/_80sdp"
+                    android:progress="100" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_styles"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <Button
+                android:id="@+id/b_italic"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="I" />
+
+            <Button
+                android:id="@+id/b_bold"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="B"
+                android:visibility="visible" />
+
+
+            <Button
+                android:id="@+id/b_underline"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+
+                android:text="U"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/b_it_bold"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="IB"
+                android:visibility="visible" />
+        </LinearLayout>
+
     </RelativeLayout>
 </RelativeLayout>
